# my-claudia

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  grep  package.json  playwright.config.ts  pnpm-lock.yaml  version.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/android-overrides/app/src/main/: AndroidManifest.xml
apps/desktop/src-tauri/android-overrides/app/src/main/java/com/myClaudia/desktop/: FileHelper.kt  MainActivity.kt
apps/desktop/src-tauri/android-overrides/app/src/main/res/xml/: file_paths.xml
apps/desktop/src-tauri/capabilities/: android.json  default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  permissions.rs  server.rs
docs/: README.md  TEST-PLAN-NEW-FEATURES.md  multi-model-collaborative-refinement.md  plugin-sdk.d.ts  test-coverage-plan.md  test-discovered-issues.md  universal-plugin-platform.md
gateway/: Dockerfile  docker-compose.yml  package.json  tsconfig.json  vitest.config.ts
scripts/: add-gateway-server.js  build-android.sh  build-linux.sh  build-macos.sh  build-windows.ps1  check-localStorage.html  check-native-modules.mjs  deploy-gateway.sh  deploy-server.sh  diagnose-auth.js  generate-dev-icons.js  generate-icons.cjs  install-macos.sh  regenerate-icons.mjs  release-macos.sh  run-server.sh  setup-server.sh  setup-wsl.sh  test-file-by-file.mjs  test-gateway-e2e.sh  test-gateway-ws.js  version-bump.sh
server/: package.json  vitest.config.ts
shared/: package.json
(+666 files in other folders)
